crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_fk_snapshot@table_with_fk_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Posts {
  id Int @id
  user_id Int
  user Users @relation(fields: [user_id], references: [id], onDelete: NoAction, onUpdate: NoAction)
  title String

  @@map("posts")
}
